[gd_scene load_steps=4 format=3 uid="uid://d0fu5bue2cvvp"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_5ncxf"]
[ext_resource type="FontFile" uid="uid://c7xrt4bv5uykw" path="res://Data/font/Pixel_Text.TTF" id="2_rohsg"]

[sub_resource type="LabelSettings" id="LabelSettings_rierb"]
font_size = 64
font_color = Color(1, 0, 1, 1)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_5ncxf")

[node name="Title" type="Label" parent="."]
offset_right = 1920.0
offset_bottom = 200.0
theme_override_fonts/font = ExtResource("2_rohsg")
text = "Goode Movement"
label_settings = SubResource("LabelSettings_rierb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 360.0
offset_top = 200.0
offset_right = 1640.0
offset_bottom = 390.0
theme_override_fonts/font = ExtResource("2_rohsg")
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="SettingsButton" type="Button" parent="."]
offset_left = 360.0
offset_top = 500.0
offset_right = 1640.0
offset_bottom = 690.0
theme_override_fonts/font = ExtResource("2_rohsg")
theme_override_font_sizes/font_size = 60
text = "Setting
"

[node name="QuitButton" type="Button" parent="."]
offset_left = 360.0
offset_top = 800.0
offset_right = 1640.0
offset_bottom = 990.0
theme_override_fonts/font = ExtResource("2_rohsg")
theme_override_font_sizes/font_size = 60
text = "Quit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 540)

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
